<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ENT UBP</string>

    <!--Menu -->
    <string name="action_settings">Settings</string>

    <!-- Navigation view -->
    <string name="navigation_menu_profil">Profil</string>
    <string name="navigation_menu_agenda">Agenda</string>
    <string name="navigation_menu_formation">Formation</string>
    <string name="navigation_menu_classroom">Salle de cours</string>
    <string name="navigation_menu_professeur">Professeurs</string>
    <string name="navigation_menu_my_course">Mes cours</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <!--Formation Display-->
    <string name="formation_title">Choix de la formation</string>
    <string name="formation_button_content">Valider</string>

    <!--Fragment Profil -->
    <string name="profil_heure_prevu">Heures prévues :</string>
    <string name="profil_heure_faite">Heures faites :</string>
    <string name="profil_heure_faire">Heures à faire :</string>
    <string name="profil_agenda_title">Cours de la journée</string>

    <!--Fragment Professeur Add-->
    <string name="professeur_add_adresse">Adresse</string>
    <string name="professeur_add_type">Type</string>

    <!--type de prof-->
    <string name="professeur_type_university_string">Universitaire</string>
    <string name="professeur_type_outsider_string">Intervenant</string>



    <!--Classroom Display -->
    <string name="classroom_display_title">Choix de la salle de cours</string>

    <!--???-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_popup_formation">PopupFormationActivity</string>
    <string name="hello_world">Hello world!</string>
</resources>
