<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/menuDrawer_profile"
              android:checked="false"
              android:icon="@mipmap/ic_profile"
              android:title="@string/navigation_menu_profil" />

        <item android:id="@+id/menuDrawer_agenda"
              android:checked="false"
              android:icon="@mipmap/ic_home"
              android:title="@string/navigation_menu_agenda" />

        <item android:id="@+id/menuDrawer_formation"
              android:checked="false"
              android:icon="@mipmap/ic_home"
              android:title="@string/navigation_menu_formation"/>

        <item android:id="@+id/menuDrawer_classroom"
              android:checked="false"
              android:icon="@mipmap/ic_home"
              android:title="@string/navigation_menu_classroom"/>
    </group>
</menu>